# MSMediaCodec

./: build.gradle  gradle.properties  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/meishe/msmediacodec/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_log_util.h  jni_callback.cpp  jni_callback.h  ms_audio_channel.cpp  ms_audio_channel.h  ms_base_channel.h  ms_safe_queue.h  ms_video_channel.cpp  ms_video_channel.h  ms_video_player.cpp  ms_video_player.h  ms_video_statel.h  native-lib.cpp  yuvengine.cpp  yuvengine.h
app/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h
app/src/main/cpp/ffmpeg/include/libavutil/: channel_layout.h  samplefmt.h
app/src/main/java/com/meishe/msmediacodec/: AndroidOS.java  App.java  AudioTrackPlayer.java  CaptureActivity.java  FileUtil.java  LaunchActivity.java  MSAudioChannel.java  MSMediaCodec.java  MSMediaMuxer.java  MSPlayer.java  MSSurfacePreview.java  MSVideoChannel.java  MSYuvEngineHelper.java  MSYuvOperateJni.java  MainActivity.java  PathUtils.java
app/src/main/java/com/meishe/msmediacodec/activity/: CaptureActivity.java  LaunchActivity.java  MSEditActivity.java  MSPlayerActivity.java  MediaCodecDecodeActivity.java
app/src/main/java/com/meishe/msmediacodec/channel/: MSAudioChannel.java  MSVideoChannel.java
app/src/main/java/com/meishe/msmediacodec/codec/: MSMediaCodec.java  MSMediaMuxer.java
app/src/main/java/com/meishe/msmediacodec/helper/: MSYuvHelper.java
app/src/main/res/layout/: activity_launch.xml  activity_main.xml  activity_media_codec_decode.xml  activity_msedit.xml  activity_msplayer.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/meishe/msmediacodec/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
